# HaptOS-v1

./: .gitignore  ARCHITECTURE.md  MANIFEST.in  PHASE1_COMPLETE.md  PHASE1_PROGRESS.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PROJECT_STATUS.md  README.md  README_SDK.md  README_STRUCTURE.md  SESSION_SUMMARY.md  demo_metal_bar.py  init.py  pyproject.toml  setup.py
assets/: texture_scan.xml
data/phase2_tunings/: synthetic_expert_001_tunings.json
data/temp_scenarios/: drop_000.xml  drop_001.xml  drop_002.xml  tap_000.xml  tap_001.xml  throw_000.xml  throw_001.xml
data/test_output/: test_noisy_v0.h5
docs/: FILE_STRUCTURE.md  FULL_BODY_IMPLEMENTATION.md  MIGRATION_SENSATIONPARAMS.md  SENSATIONPARAMS_IMPLEMENTATION_SUMMARY.md  SUMMARY.md  WHATS_NEW.md  api_reference.md  quickstart.md
docs/guides/: MODULAR_SCENARIOS_GUIDE.md  MODULAR_TESTING_GUIDE.md  QUICK_START.md  README_INTERACTIVE.md  START_HERE.md  TESTING_SYSTEM_README.md
docs/setup/: INTERACTIVE_SETUP.md  MACOS_SETUP.md  TKINTER_FIX.md
environments/: README.md
examples/: README.md  basic_simulation.py  custom_homunculus.py  grasp_demo.py  hardware_integration.py  hello_haptos.py  interactive_simulator.py
firmware/: FIRMWARE_SPEC.md  HaptosReceiver.ino  HaptosRuntime.ino  README.md  hapticspassthrough.ino  inference_core.h  weights.h
haptics_lab/: export_weights.py  haptic_net.py  weights.h
models/zoo/: README.md
scripts/demos/: demo_modular_system.py  interactive_haptics_demo.py  simple_haptics_test.py
scripts/tools/: interactive_parameter_tuner.py  test_with_mjpython.sh  visualize_contacts.py
src/converter/: converter.py  feature_extractor.py  feature_extractor_v2.py
src/core/: __init__.py  schemas.py
src/data_generator/: batch_generator.py  dataset_manager.py  noise_injector.py  phase2_dataset.py  texture_scanner.py
src/haptos/: __init__.py  driver.py  homunculus.py  quickstart.py  renderer.py  simulation.py
src/hardware/: __init__.py  body_segments.py  driver_manager.py  mock_driver.py  multi_driver_manager.py  protocol_validator.py  translators.py
src/inference/: adapters.py  batched_renderer.py  combined_predictor.py  neural_renderer.py  neural_renderer_v2.py  scalable_renderer.py  sensation_lookup.py  weights_exporter.py
src/models/: nn_v0.py  nn_v2.py
src/physics/: multi_contact_engine.py
src/rendering/: __init__.py  somatotopic_shaper.py
src/routing/: __init__.py  contact_prioritizer.py  somatotopic_router.py
src/scenarios/: __init__.py
src/training/: label_generator.py  train_v0.py  train_v1.py
src/tuning/: __init__.py  synthetic_expert.py
tests/: mock_arduino.h  python_truth.txt  test_model.pt  verify_cpp_inference.cpp  verify_texture.py
tests/converter/: test_feature_extractor_v2.py
tests/hardware/: test_translators.py
tests/integration/: test_batch_generator.py  test_detailed_hand.py  test_full_pipeline.py  test_hand_poses.py  test_hand_simulation.py  test_hand_visual.py  test_multi_contact_engine.py  test_pose_comparison.py  test_scenarios.py  (+3 more)
(+14 files in other folders)
